--- a/app/src/main/res/layout/dashboard.xml
+++ b/app/src/main/res/layout/dashboard.xml
@@ -4,17 +4,19 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center">
+
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/dashboardTextView"
+        android:layout_width="200dp"
+        android:layout_height="35dp"
+        android:layout_gravity="center_horizontal"
         android:textColor="#4E057E"
-        android:text="Dashboard"
-        android:textSize="20dp"/>
+        android:textSize="20dp" />
 
     <Button
         android:id="@+id/btON"
         android:layout_width="200dp"
-        android:layout_height="60dp"
+        android:layout_height="65dp"
         android:layout_marginTop="60dp"
         android:text="Bluetooth ON"
         android:textAllCaps="false"
@@ -28,6 +30,15 @@
         android:text="Bluetooth OFF"
         android:textSize="20dp"
         android:textAllCaps = "false"/>
+
+    <Button
+        android:id="@+id/hrButton"
+        android:layout_width="200dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="60dp"
+        android:text="Pomiar tętna"
+        android:textSize="20dp"
+        android:textAllCaps="false" />
 
     <Button
         android:id="@+id/logout"
