--- a/app/src/main/res/layout/activity_heart_rate_measurement.xml
+++ b/app/src/main/res/layout/activity_heart_rate_measurement.xml
@@ -8,15 +8,20 @@
 
     <TextView
         android:id="@+id/headerTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Wykonaj pomiar tętna"
+        android:text="Pomiar tetna i glukozy"
         android:textSize="24sp"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent"
-
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/headerTextView" />
 
     <Button
         android:id="@+id/backButton"
