--- a/app/src/main/res/layout/dashboard.xml
+++ b/app/src/main/res/layout/dashboard.xml
@@ -36,7 +36,7 @@
         android:layout_width="200dp"
         android:layout_height="60dp"
         android:layout_marginTop="60dp"
-        android:text="Pomiar tętna"
+        android:text="Pomiary"
         android:textSize="20dp"
         android:textAllCaps="false" />
 
