--- a/app/src/main/res/layout/activity_heart_rate_measurement.xml
+++ b/app/src/main/res/layout/activity_heart_rate_measurement.xml
@@ -17,31 +17,34 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <CheckBox
-        android:id="@+id/manualMeasurementCheckbox"
+    <RadioGroup
+        android:id="@+id/measurementRadioGroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Pomiary ręczne"
-        android:layout_marginTop="16dp"
+        android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@+id/headerTextView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/bleMeasurementCheckbox" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp">
 
-    <CheckBox
-        android:id="@+id/bleMeasurementCheckbox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Pomiary BLE"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/headerTextView"
-        app:layout_constraintStart_toEndOf="@+id/manualMeasurementCheckbox"
-        app:layout_constraintEnd_toEndOf="parent" />
+        <RadioButton
+            android:id="@+id/manualMeasurementRadioButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Pomiary ręczne" />
+
+        <RadioButton
+            android:id="@+id/bleMeasurementRadioButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Pomiary BLE" />
+    </RadioGroup>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/manualMeasurementCheckbox"
+        app:layout_constraintTop_toBottomOf="@+id/measurementRadioGroup"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:listitem="@layout/measurement_item" />
 
