--- a/app/src/main/res/layout/measurement_item.xml
+++ b/app/src/main/res/layout/measurement_item.xml
@@ -10,6 +10,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="18sp"
-    android:layout_marginTop="65dp" />
+        android:layout_marginTop="8dp" />
+
+    <!-- Dodajemy pola EditText na tętno i poziom glukozy -->
+    <EditText
+        android:id="@+id/manualTetnoEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Tętno [bpm]"
+        android:inputType="numberDecimal"
+        android:layout_marginTop="8dp" />
+
+    <EditText
+        android:id="@+id/manualGlukozaEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Glukoza [mg/dl]"
+        android:inputType="numberDecimal"
+        android:layout_marginTop="8dp" />
 
 </LinearLayout>
