--- a/app/src/main/res/layout/activity_result_analysis.xml
+++ b/app/src/main/res/layout/activity_result_analysis.xml
@@ -4,70 +4,58 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HeartRateMeasurementActivity">
+    tools:context=".ResultAnalysisActivity">
 
     <TextView
-        android:id="@+id/headerTextView"
-        android:layout_width="match_parent"
+        android:id="@+id/sessionLabelTextView"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/label_choose_session"
+        android:text="Wybierz numer ID sesji pomiarowej"
         android:textSize="16sp"
-        android:gravity="center"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
-
-    <TextView
-        android:id="@+id/resultTextView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="2"
-        android:text=""
-        android:textSize="16sp"
-        android:gravity="center" />
 
     <Spinner
         android:id="@+id/sessionSpinner"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/headerTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/sessionLabelTextView" />
+
+    <com.github.mikephil.charting.charts.LineChart
+        android:id="@+id/glucoseChart"
+        android:layout_width="0dp"
+        android:layout_height="300dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/sessionSpinner"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/resultAnalysisBackButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="POWRÓT"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/glucoseChart"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/sessionSpinner"
-        app:layout_constraintBottom_toTopOf="@+id/buttonsLayout"
-        tools:listitem="@layout/measurement_item" />
-
-    <LinearLayout
-        android:id="@+id/buttonsLayout"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/resultAnalysisBackButton"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        android:layout_margin="16dp">
-
-        <Button
-            android:id="@+id/resultAnalysisBackButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="POWRÓT"
-            android:textSize="12sp"
-            android:layout_marginEnd="8dp" />
-
-    </LinearLayout>
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:listitem="@layout/measurement_item" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
