--- a/app/src/main/res/layout/activity_ble_measurement.xml
+++ b/app/src/main/res/layout/activity_ble_measurement.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="#888A66CD"
     android:layout_height="match_parent"
     tools:context=".HeartRateMeasurementActivity">
 
@@ -10,7 +11,7 @@
         android:id="@+id/headerTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/pomiary_r_czne"
+        android:text="@string/pomiary_ble"
         android:textSize="24sp"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent"
