--- a/app/src/main/res/layout/signup.xml
+++ b/app/src/main/res/layout/signup.xml
@@ -13,31 +13,21 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="eHealthCare"
-        android:textColor="#4E057E"
-        android:textSize="45dp"
-        android:layout_marginBottom="70dp"
-        android:textStyle="bold"
-        android:typeface="monospace" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:text="Sign Up"
         android:textColor="#ffffff"
-        android:textSize="30dp"
+        android:textSize="25dp"
         android:textStyle="bold"
         />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp">
+        android:layout_marginTop="20dp">
 
         <EditText
             android:id="@+id/email"
             android:layout_width="match_parent"
-            android:layout_height="65dp"
+            android:layout_height="60dp"
             android:background="@drawable/rectangle_field"
             android:hint="Enter your email..."
             android:inputType="textEmailAddress"
@@ -54,22 +44,24 @@
             android:layout_alignParentLeft="true"
             android:layout_centerInParent="true"/>
     </RelativeLayout>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp">
+        android:layout_marginTop="20dp">
 
         <EditText
             android:id="@+id/password1"
             android:layout_width="match_parent"
-            android:layout_height="65dp"
+            android:layout_height="60dp"
+            android:background="@drawable/rectangle_field"
             android:hint="Enter your password..."
-            android:paddingVertical="15dp"
-            android:textColor="#000000"
-            android:textStyle="bold"
             android:inputType="textPassword"
+            android:paddingVertical="15dp"
             android:paddingLeft="60dp"
-            android:background="@drawable/rectangle_field" />
+            android:textColor="#000000"
+            android:textStyle="bold" />
+
         <ImageView
             android:layout_width="37dp"
             android:layout_height="50dp"
@@ -78,22 +70,24 @@
             android:layout_alignParentLeft="true"
             android:layout_centerInParent="true"/>
     </RelativeLayout>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp">
+        android:layout_marginTop="20dp">
 
         <EditText
             android:id="@+id/password2"
             android:layout_width="match_parent"
-            android:layout_height="65dp"
+            android:layout_height="60dp"
+            android:background="@drawable/rectangle_field"
             android:hint="Confirm your password..."
-            android:paddingVertical="15dp"
-            android:textColor="#000000"
-            android:textStyle="bold"
             android:inputType="textPassword"
+            android:paddingVertical="15dp"
             android:paddingLeft="60dp"
-            android:background="@drawable/rectangle_field" />
+            android:textColor="#000000"
+            android:textStyle="bold" />
+
         <ImageView
             android:layout_width="37dp"
             android:layout_height="45dp"
@@ -102,6 +96,7 @@
             android:layout_alignParentLeft="true"
             android:layout_centerInParent="true"/>
     </RelativeLayout>
+
     <Button
         android:id="@+id/register"
         android:layout_width="match_parent"
@@ -110,30 +105,31 @@
         android:textColor="#ffffff"
         android:layout_marginTop="30dp"
         android:background="@drawable/rectangle_field"
-        android:textSize="25dp"
+        android:textSize="20dp"
         android:textAllCaps="false"
         />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="40dp">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Already registered?"
-            android:textSize="18dp"/>
-        <TextView
-            android:id="@+id/signInTextV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Sign In"
-            android:layout_marginLeft="10dp"
-            android:textStyle="bold"
-            android:textSize="20dp"
-            android:textColor="#ffffff"/>
-    </LinearLayout>
-
+        android:layout_marginTop="10dp"
+    android:layout_marginBottom="20dp">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Already registered?"
+        android:textSize="18dp"/>
+    <TextView
+        android:id="@+id/signInTextV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Sign In"
+        android:layout_marginLeft="10dp"
+        android:textStyle="bold"
+        android:textSize="20dp"
+        android:textColor="#ffffff"/>
 </LinearLayout>
+
+    </LinearLayout>
