--- a/app/src/main/res/layout/activity_result_analysis.xml
+++ b/app/src/main/res/layout/activity_result_analysis.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:background="#888A66CD"
     android:layout_height="match_parent"
-    tools:context=".ResultAnalysisActivity">
+    tools:context=".GlucoseAnalysis">
 
     <TextView
         android:id="@+id/sessionLabelTextView"
