--- a/app/src/main/res/layout/activity_ble_measurement.xml
+++ b/app/src/main/res/layout/activity_ble_measurement.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:background="#888A66CD"
     android:layout_height="match_parent"
-    tools:context=".HeartRateMeasurementActivity">
+    tools:context=".MeasureManager">
 
     <TextView
         android:id="@+id/headerTextView"
