--- a/app/src/main/res/layout/signup.xml
+++ b/app/src/main/res/layout/signup.xml
@@ -8,7 +8,7 @@
     android:gravity="center"
     android:orientation="vertical"
     android:paddingHorizontal="30dp"
-    tools:context=".MainActivity">
+    tools:context=".SignUp">
 
     <TextView
         android:layout_width="wrap_content"
