Aktualizacja dashboardu "Pomiary ręczne": narzucenie ograniczeń co do wprowadzanych wartości pomiarów i zapisywania sesji

--- a/app/src/main/res/layout/download_results.xml
+++ b/app/src/main/res/layout/download_results.xml
@@ -27,4 +27,12 @@
         android:layout_height="wrap_content"
         android:text="POWRÓT"
         android:layout_marginTop="16dp" />
+
+    <Button
+        android:id="@+id/driveButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="DRIVE"
+        android:layout_marginTop="16dp" />
+
 </LinearLayout>
