--- a/app/src/main/res/layout/measure_manager.xml
+++ b/app/src/main/res/layout/measure_manager.xml
@@ -22,50 +22,53 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/headerTextView"
         app:layout_constraintBottom_toTopOf="@+id/buttonsLayout"
+        app:layout_constraintTop_toBottomOf="@+id/headerTextView"
+        app:layout_constraintVertical_bias="0.0"
+        tools:layout_editor_absoluteX="0dp"
         tools:listitem="@layout/measurement_item" />
 
     <LinearLayout
         android:id="@+id/buttonsLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_margin="16dp"
+        android:layout_marginBottom="140dp"
         android:gravity="center"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        android:layout_margin="16dp">
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent">
 
         <Button
             android:id="@+id/backButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
             android:layout_weight="1"
             android:text="POWRÓT"
             android:textSize="12sp"
-            android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toStartOf="@+id/saveButton" />
 
         <Button
             android:id="@+id/saveButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
             android:layout_weight="1"
             android:text="ZAPISZ"
             android:textSize="12sp"
-            android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toStartOf="@+id/clearButton" />
 
         <Button
             android:id="@+id/backupButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
             android:layout_weight="1"
             android:text="POBIERZ"
             android:textSize="12sp"
-            android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toStartOf="@+id/clearButton" />
 
         <Button
@@ -78,5 +81,15 @@
             app:layout_constraintEnd_toEndOf="parent" />
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/sessionNumberTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
