--- a/app/src/main/res/layout/ble_measure.xml
+++ b/app/src/main/res/layout/ble_measure.xml
@@ -5,12 +5,14 @@
     android:layout_width="match_parent"
     android:background="#888A66CD"
     android:layout_height="match_parent"
-    tools:context=".MeasureManager">
+    tools:context=".BLEMeasure">
 
     <TextView
         android:id="@+id/headerTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:typeface="sans"
+        android:gravity="center"
         android:text="@string/pomiary_ble"
         android:textSize="24sp"
         android:layout_marginTop="16dp"
@@ -21,10 +23,10 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
+        android:typeface="sans"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@+id/headerTextView"
-        app:layout_constraintBottom_toTopOf="@+id/buttonsLayout"
-        tools:listitem="@layout/measurement_item" />
+        app:layout_constraintBottom_toTopOf="@+id/buttonsLayout" />
 
     <LinearLayout
         android:id="@+id/buttonsLayout"
@@ -32,6 +34,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
+        android:typeface="sans"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,6 +45,7 @@
             android:id="@+id/bleMeasurementBackButton"
             android:layout_width=   "0dp"
             android:layout_height="wrap_content"
+            android:typeface="sans"
             android:layout_weight="1"
             android:text="POWRÓT"
             android:textSize="12sp"
