--- a/app/src/main/res/layout/download_results.xml
+++ b/app/src/main/res/layout/download_results.xml
@@ -10,14 +10,17 @@
         android:id="@+id/sessionLabelTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:typeface="sans"
         android:text="Wybierz numer ID sesji pomiarowej"
-        android:textSize="16sp"
+        android:gravity="center"
+        android:textSize="18sp"
         android:layout_marginTop="16dp" />
 
     <Spinner
         android:id="@+id/downloadSessionSpinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:typeface="sans"
         android:layout_marginTop="8dp" />
 
 
@@ -25,6 +28,7 @@
         android:id="@+id/downloadResultsBackButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:typeface="sans"
         android:text="POWRÓT"
         android:layout_marginTop="16dp" />
 
@@ -32,6 +36,7 @@
         android:id="@+id/driveButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:typeface="sans"
         android:text="DRIVE"
         android:layout_marginTop="16dp" />
 
