--- a/app/src/main/res/layout/glucose_analysis.xml
+++ b/app/src/main/res/layout/glucose_analysis.xml
@@ -12,7 +12,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Wybierz numer ID sesji pomiarowej"
-        android:textSize="16sp"
+        android:textSize="18sp"
+        android:typeface="sans"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,6 +24,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:typeface="sans"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:minHeight="48dp"
@@ -33,6 +35,7 @@
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/glucoseChart"
         android:layout_width="0dp"
+        android:typeface="sans"
         android:layout_height="300dp"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@+id/sessionSpinner"
@@ -45,6 +48,7 @@
         android:layout_height="wrap_content"
         android:text="POWRÓT"
         android:layout_marginTop="16dp"
+        android:typeface="sans"
         app:layout_constraintTop_toBottomOf="@+id/glucoseChart"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -53,10 +57,10 @@
         android:id="@+id/recyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:typeface="sans"
         app:layout_constraintTop_toBottomOf="@+id/resultAnalysisBackButton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:listitem="@layout/measurement_item" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
