--- a/app/src/main/res/layout/heart_analysis.xml
+++ b/app/src/main/res/layout/heart_analysis.xml
@@ -12,9 +12,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Wybierz numer ID sesji pomiarowej"
-        android:textSize="16sp"
+        android:textSize="18sp"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent"
+        android:typeface="sans"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -25,6 +26,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
+        android:typeface="sans"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,6 +37,7 @@
         android:layout_width="0dp"
         android:layout_height="300dp"
         android:layout_marginTop="16dp"
+        android:typeface="sans"
         app:layout_constraintTop_toBottomOf="@+id/sessionSpinner"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -43,6 +46,7 @@
         android:id="@+id/heartRateAnalysisBackButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:typeface="sans"
         android:text="POWRÓT"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@+id/heartRateChart"
@@ -53,10 +57,10 @@
         android:id="@+id/recyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:typeface="sans"
         app:layout_constraintTop_toBottomOf="@+id/heartRateAnalysisBackButton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:listitem="@layout/measurement_item" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
