--- a/app/src/main/res/layout/manual_measure.xml
+++ b/app/src/main/res/layout/manual_measure.xml
@@ -14,14 +14,19 @@
         android:text="@string/pomiary_r_czne"
         android:textSize="24sp"
         android:layout_marginTop="16dp"
+        android:typeface="sans"
+        android:gravity="center"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintVertical_bias="0.0"/>
 
     <Button
         android:id="@+id/selectDateButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:typeface="sans"
         android:text="DATA POMIARU"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/headerTextView"
@@ -31,6 +36,7 @@
         android:id="@+id/selectedDateTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:typeface="sans"
         android:text=""
         android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/selectDateButton"
@@ -66,6 +72,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_weight="1"
+            android:typeface="sans"
             android:text="POWRÓT"
             android:textSize="12sp"
             app:layout_constraintEnd_toStartOf="@+id/saveButton" />
@@ -74,6 +81,7 @@
             android:id="@+id/saveButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:typeface="sans"
             android:layout_marginEnd="8dp"
             android:layout_weight="1"
             android:text="ZAPISZ"
@@ -85,6 +93,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:typeface="sans"
             android:text="WYCZYŚĆ"
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent" />
@@ -96,6 +105,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""
+        android:typeface="sans"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
