--- a/app/src/main/res/layout/measure_edit.xml
+++ b/app/src/main/res/layout/measure_edit.xml
@@ -9,6 +9,7 @@
         android:id="@+id/measurementTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:typeface="sans"
         android:textSize="18sp"
         android:layout_marginTop="8dp" />
 
@@ -17,6 +18,7 @@
         android:id="@+id/manualTetnoEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:typeface="sans"
         android:hint="Tętno [bpm]"
         android:inputType="numberDecimal"
         android:layout_marginTop="8dp" />
@@ -25,6 +27,7 @@
         android:id="@+id/manualGlukozaEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:typeface="sans"
         android:hint="Glukoza [mg/dl]"
         android:inputType="numberDecimal"
         android:layout_marginTop="8dp" />
