--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -14,6 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Sign Up"
+        android:typeface="sans"
         android:textColor="#ffffff"
         android:textSize="25dp"
         android:textStyle="bold"
@@ -31,6 +32,7 @@
             android:background="@drawable/rectangle_field"
             android:hint="Enter your email..."
             android:inputType="textEmailAddress"
+            android:typeface="sans"
             android:paddingVertical="15dp"
             android:paddingLeft="60dp"
             android:textColor="#000000"
@@ -54,6 +56,7 @@
             android:id="@+id/password1"
             android:layout_width="match_parent"
             android:layout_height="60dp"
+            android:typeface="sans"
             android:background="@drawable/rectangle_field"
             android:hint="Enter your password..."
             android:inputType="textPassword"
@@ -82,6 +85,7 @@
             android:layout_height="60dp"
             android:background="@drawable/rectangle_field"
             android:hint="Confirm your password..."
+            android:typeface="sans"
             android:inputType="textPassword"
             android:paddingVertical="15dp"
             android:paddingLeft="60dp"
@@ -102,6 +106,7 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:text="Sign Up"
+        android:typeface="sans"
         android:textColor="#ffffff"
         android:layout_marginTop="30dp"
         android:background="@drawable/rectangle_field"
@@ -120,10 +125,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Already registered?"
+        android:typeface="sans"
         android:textSize="18dp"/>
     <TextView
         android:id="@+id/signInTextV"
         android:layout_width="wrap_content"
+        android:typeface="sans"
         android:layout_height="wrap_content"
         android:text="Sign In"
         android:layout_marginLeft="10dp"
